outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_23-57-19/evaluations/problem_eval-8112220421355000067_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to the nearest/farthest node otherwise, adjusting the threshold based on the number of unvisited nodes to balance exploration and exploitation more aggressively.}
                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to the nearest/farthest node otherwise, adjusting the threshold based on the number of unvisited nodes to balance exploration and exploitation more aggressively.}
                                                                                                                                                                              ^
SyntaxError: unmatched '}'
